Closed
      
        Bug 227838
      
      
        Opened 21 years ago
          Closed 21 years ago
      
        
    
  
DRefTool output for addrbook except nsAbOutlookDirectory.cpp     
    Categories
(SeaMonkey :: MailNews: Address Book & Contacts, defect)
Tracking
(Not tracked)
        RESOLVED
        FIXED
        
    
  
People
(Reporter: timeless, Assigned: timeless)
Details
Attachments
(1 file, 1 obsolete file)
| 3.38 KB,
          patch         | roc
:
              
              review+ roc
:
              
              superreview+ | Details | Diff | Splinter Review | 
http://bonsai.mozilla.org/cvsblame.cgi?file=mozilla/mailnews/addrbook/src/nsAbWinHelper.cpp&rev=1.11&mark=602#597
Deref-error: "values"
http://bonsai.mozilla.org/cvsblame.cgi?file=mozilla/mailnews/addrbook/src/nsAddrDatabase.cpp&rev=1.117&mark=533#528
Deref-error: "pFilePath"
http://bonsai.mozilla.org/cvsblame.cgi?file=mozilla/mailnews/addrbook/src/nsAddrDatabase.cpp&rev=1.117&mark=580#575
Deref-error: "newMabFile"
http://bonsai.mozilla.org/cvsblame.cgi?file=mozilla/mailnews/addrbook/src/nsAddrDatabase.cpp&rev=1.117&mark=581#576
Deref-error: "newMabFile"
http://bonsai.mozilla.org/cvsblame.cgi?file=mozilla/mailnews/addrbook/src/nsAddrDatabase.cpp&rev=1.117&mark=589#584
Deref-error: "newMabFile"
http://bonsai.mozilla.org/cvsblame.cgi?file=mozilla/mailnews/addrbook/src/nsAbMDBDirectory.cpp&rev=1.33&mark=656#651
Deref-error: "dblistproperty"
        Attachment #137053 -
        Attachment description: handle failures (line endings may be broken) → oops plain text composer doesn't believe in whitespace
        Attachment #137053 -
        Attachment is patch: false
        Attachment #137053 -
        Attachment is obsolete: true
        Attachment #137838 -
        Flags: superreview?(roc)
        Attachment #137838 -
        Flags: review?(roc)
        Attachment #137838 -
        Flags: superreview?(roc)
        Attachment #137838 -
        Flags: superreview+
        Attachment #137838 -
        Flags: review?(roc)
        Attachment #137838 -
        Flags: review+
checked in
Status: NEW → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
| Updated•20 years ago
           | 
Product: Browser → Seamonkey
          You need to log in
          before you can comment on or make changes to this bug.
        
 
 
Description
•