Bug 227838 - DRefTool output for addrbook except nsAbOutlookDirectory.cpp r=roc sr=roc